Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
Surfaced by test case in https://github.com/apache/arrow/pull/3239
```
In [1]: import pyarrow as pa
In [2]: pa.array([b'foo'])
Out[2]:
<pyarrow.lib.BinaryArray object at 0x7f6ed510b9a8>
[
666F6F
]
In [3]: arr = pa.array([b'foo'])
In [4]: arr.cast(pa.binary())
---------------------------------------------------------------------------
ArrowNotImplementedError Traceback (most recent call last)
<ipython-input-4-d6c6f1159d55> in <module>()
----> 1 arr.cast(pa.binary())
~/miniconda/envs/arrow-dev/lib/python3.6/site-packages/pyarrow/array.pxi in pyarrow.lib.Array.cast()
~/miniconda/envs/arrow-dev/lib/python3.6/site-packages/pyarrow/error.pxi in pyarrow.lib.check_status()
ArrowNotImplementedError: No cast implemented from binary to binary
```
Attachments
Issue Links
- links to