ARROW-4101: [C++] Identity BinaryType cast

Author: Krisztián Szűcs <szucs.krisztian@gmail.com>
Author: François Saint-Jacques <fsaintjacques@gmail.com>

Closes #3245 from fsaintjacques/ARROW-4101-cast-identity and squashes the following commits:

4bb2fb7b <Krisztián Szűcs> parametrize
4319bace <François Saint-Jacques> ARROW-4101:  Identity BinaryType cast